--- a/.github/workflows/shorebird-patch.yml
+++ b/.github/workflows/shorebird-patch.yml
@@ -2,24 +2,38 @@ name: Shorebird OTA Patch
 
 on:
   workflow_dispatch:
+    inputs:
+      release_version:
+        description: "Release version to patch (default: current)"
+        required: false
+        default: "current"
+        type: string
 
 jobs:
   patch:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Install Flutter
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.0'
+          channel: stable
+          flutter-version: "3.24.0"
 
-      - name: Install Shorebird
+      - name: Setup Shorebird
+        uses: shorebirdtech/setup-shorebird@v1
+        with:
+          version: latest
+
+      - name: Verify Shorebird
         run: |
-          curl -fsSL https://raw.githubusercontent.com/shorebirdtech/install/main/install.sh | bash
-          echo "$HOME/.shorebird/bin" >> $GITHUB_PATH
+          which shorebird
+          shorebird --version
 
-      - name: Shorebird Patch
-        run: shorebird patch android
+      - name: Create OTA patch
         env:
           SHOREBIRD_TOKEN: ${{ secrets.SHOREBIRD_TOKEN }}
+        run: |
+          shorebird patch android --force --release-version ${{ inputs.release_version }}
