--- a/.github/workflows/shorebird-patch.yml
+++ b/.github/workflows/shorebird-patch.yml
@@ -1,41 +1,56 @@
 name: Shorebird OTA Patch
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch: {}  # Manual trigger
 
 jobs:
   patch:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout code
       - uses: actions/checkout@v4
 
+      # Step 2: Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: "3.13.0"
+          flutter-version: "3.13.0"  # Make sure Dart 3.8.1+ is included
 
-      # Install Shorebird CLI and add to PATH (no "version" input)
+      # Step 3: Optional upgrade Flutter
+      - name: Upgrade Flutter
+        run: flutter upgrade
+
+      # Step 4: Setup Shorebird CLI
       - name: Setup Shorebird
         uses: shorebirdtech/setup-shorebird@v1
         with:
           cache: true
 
+      # Step 5: Verify Shorebird installation
       - name: Verify Shorebird
         run: |
           which shorebird
           shorebird --version
 
+      # Step 6: Clean build cache and get dependencies
       - name: Clean build cache
         run: |
           flutter clean
           flutter pub get
 
+      # Step 7: Check Flutter & Dart version
+      - name: Check Flutter & Dart version
+        run: |
+          flutter --version
+          dart --version
+
+      # Step 8: Create OTA patch
       - name: Create OTA patch
         env:
           SHOREBIRD_TOKEN: ${{ secrets.SHOREBIRD_TOKEN }}
         run: |
-          # Patch the latest Shorebird release for this app (recommended)
-          shorebird patch android --release-version=latest --no-confirm --flutter-version=3.24.0
-          # If you need a specific version instead, comment the line above and use:
-          # shorebird patch android --release-version "1.0.2+4" --no-confirm --flutter-version=3.24.0
+          # Patch the latest Shorebird release for this app
+          shorebird patch android --release-version=latest --no-confirm
+          # If you need a specific release version, comment the line above and use:
+          # shorebird patch android --release-version "1.0.2+4" --no-confirm
