Remove flutter upgrade step from workflow3

--- a/.github/workflows/shorebird-patch.yml
+++ b/.github/workflows/shorebird-patch.yml
@@ -15,7 +15,6 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: "3.35.4" # Matches local Flutter version with Dart 3.9.2
 
       # Step 3: Setup Shorebird CLI
       - name: Setup Shorebird
@@ -47,6 +46,6 @@ jobs:
           SHOREBIRD_TOKEN: ${{ secrets.SHOREBIRD_TOKEN }}
         run: |
           # Patch the latest Shorebird release for this app
-          shorebird patch android --release-version=latest --no-confirm --flutter-version=3.35.4
+          shorebird patch android --release-version=latest --no-confirm
           # If you need a specific release version, comment the line above and use:
           # shorebird patch android --release-version "1.0.2+4" --no-confirm --flutter-version=3.35.4
