Remove flutter upgrade step from workflow៤

--- a/.github/workflows/shorebird-patch.yml
+++ b/.github/workflows/shorebird-patch.yml
@@ -15,6 +15,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          flutter-version: "3.35.3" # Supported by Shorebird
 
       # Step 3: Setup Shorebird CLI
       - name: Setup Shorebird
@@ -47,5 +48,5 @@ jobs:
         run: |
           # Patch the latest Shorebird release for this app
           shorebird patch android --release-version=latest --no-confirm
-          # If you need a specific release version, comment the line above and use:
-          # shorebird patch android --release-version "1.0.2+4" --no-confirm --flutter-version=3.35.4
+            # If you need a specific release version, comment the line above and use:
+            # shorebird patch android --release-version "1.0.3+5" --no-confirm --flutter-version=3.35.3
